--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ footer p {
 
 .jumbotron {
   height: 800px;
-  background-image: url("https://content.codecademy.com/projects/broadway/bg.jpg");
+  background-image: url("https://cdn.discordapp.com/attachments/1098198774989467720/1149945675681902702/IMG_6738_Original.JPG");
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
